kotlin.web.demo.server/examples/Atomic Kotlin Exercises/07_Variables/Exercise1/Solution.kt
fun main(args: Array<String>) {
    
    val answer = 42
    // error: val cannot be reassigned
    //answer = 43
}